[package]
name = "letsgui"
version = "0.1.0"
authors = ["Windel Bouwman <windel.bouwman@demcon.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
winapi = { version = "0.3.8", features = ["commctrl", "errhandlingapi", "libloaderapi", "winuser"] }
