[package]
name = "letsgui"
version = "0.1.0"
authors = ["Windel Bouwman <windel.bouwman@demcon.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Choose the backend here, using feature flags.
# Options:
# - win32-backend
# - gtk-backend
[features]
#default = ["win32-backend"]
default = ["gtk-backend"]
win32-backend = ["winapi"]
gtk-backend = ["gtk", "gio"]

[dependencies]
log = "0.4.8"

# win32 backend dependencies:
winapi = { optional = true, version = "0.3.8", features = ["commctrl", "errhandlingapi", "libloaderapi", "winuser"] }

# gtk backend dependencies:
gtk = { optional = true, version = "0.8" }
gio = { optional = true, version = "0" }